objects/SH2__Filter__c.object
<CustomObject>
    <fields>
        <fullName>SH2__JSON__c</fullName>
        <label>JSON</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SH2__Logic__c</fullName>
        <description>Comparison operator.</description>
        <label>Logic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SH2__Test_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Test Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>Criterias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SH2__XRef__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Filter</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>